integrate realm to build and instantiate first realm model for ingredients. adjust instantiation configuration for proper building

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Food n Such</string>
+    <string name="food_suggestions_for">Food suggestions for </string>
 </resources>
