clean up ingredient model, deleting comments and making the name property required

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Food n Such</string>
     <string name="food_suggestions_for">Food suggestions for </string>
+    <string name="find_food_btn">Find Food</string>
 </resources>
