--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Food n Such</string>
     <string name="food_suggestions_for">Food suggestions for </string>
     <string name="find_food_btn">Find Food</string>
+    <string name="edit_text_hint">Enter Noms</string>
 </resources>
